--- a/absensigunungmasp1/ios/Podfile
+++ b/absensigunungmasp1/ios/Podfile
@@ -8,6 +8,8 @@ target 'absensigunungmasp1' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
+
   target 'absensigunungmasp1Tests' do
     inherit! :complete
     # Pods for testing
