--- a/absensigunungmasp1/android/app/src/debug/AndroidManifest.xml
+++ b/absensigunungmasp1/android/app/src/debug/AndroidManifest.xml
@@ -3,5 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+       <uses-permission android:name="android.permission.INTERNET" />
+       
+       <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+        <uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION" />
+      <uses-permission android:name="android.permission.CAMERA" />
     <application android:usesCleartextTraffic="true" tools:targetApi="28" tools:ignore="GoogleAppIndexingWarning" />
 </manifest>
