--- a/absensigunungmasp1/android/app/src/debug/AndroidManifest.xml
+++ b/absensigunungmasp1/android/app/src/debug/AndroidManifest.xml
@@ -4,10 +4,10 @@
 
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
        <uses-permission android:name="android.permission.INTERNET" />
-       
+
        <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
         <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
         <uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION" />
-      <uses-permission android:name="android.permission.CAMERA" />
+             <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application android:usesCleartextTraffic="true" tools:targetApi="28" tools:ignore="GoogleAppIndexingWarning" />
 </manifest>
