--- a/absensigunungmasp1/ios/Podfile
+++ b/absensigunungmasp1/ios/Podfile
@@ -10,6 +10,8 @@ target 'absensigunungmasp1' do
 
   pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
 
+  pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
+
   target 'absensigunungmasp1Tests' do
     inherit! :complete
     # Pods for testing
