--- a/absensigunungmasp1/package.json
+++ b/absensigunungmasp1/package.json
@@ -19,13 +19,15 @@
     "react-native": "^0.63.4",
     "react-native-datepicker": "^1.7.2",
     "react-native-document-picker": "^4.2.0",
+    "react-native-file-upload": "^1.0.4",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-image-picker": "^3.1.3",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
     "react-native-svg": "^12.1.0",
-    "react-native-ui-xg": "0.0.6"
+    "react-native-ui-xg": "0.0.6",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "7.12.10",
