--- a/absensigunungmasp1/android/app/src/debug/AndroidManifest.xml
+++ b/absensigunungmasp1/android/app/src/debug/AndroidManifest.xml
@@ -9,5 +9,6 @@
         <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
         <uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION" />
              <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+             <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <application android:usesCleartextTraffic="true" tools:targetApi="28" tools:ignore="GoogleAppIndexingWarning" />
 </manifest>
