--- a/absensigunungmasp1/package.json
+++ b/absensigunungmasp1/package.json
@@ -12,14 +12,17 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.13.3",
     "@react-native-community/datetimepicker": "^3.0.8",
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "geolib": "^3.3.1",
     "react": "16.13.1",
     "react-native": "^0.63.4",
     "react-native-datepicker": "^1.7.2",
     "react-native-document-picker": "^4.2.0",
     "react-native-file-upload": "^1.0.4",
+    "react-native-geolocation-service": "^5.1.1",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-image-picker": "^3.1.3",
     "react-native-reanimated": "^1.13.2",
