--- a/absensigunungmasp1/package.json
+++ b/absensigunungmasp1/package.json
@@ -17,6 +17,8 @@
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "geolib": "^3.3.1",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.32",
     "react": "16.13.1",
     "react-native": "^0.63.4",
     "react-native-datepicker": "^1.7.2",
