--- a/absensigunungmasp1/android/settings.gradle
+++ b/absensigunungmasp1/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'absensigunungmasp1'
+include ':react-native-clear-app-cache'
+project(':react-native-clear-app-cache').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-clear-app-cache/android')
 include ':rn-fetch-blob'
 project(':rn-fetch-blob').projectDir = new File(rootProject.projectDir, '../node_modules/rn-fetch-blob/android')
 include ':react-native-image-picker'
