--- a/absensigunungmasp1/package.json
+++ b/absensigunungmasp1/package.json
@@ -27,9 +27,11 @@
     "react-native-geolocation-service": "^5.1.1",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-image-picker": "^3.1.3",
+    "react-native-pulse-loader": "^1.0.3",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
+    "react-native-spinkit": "^1.5.1",
     "react-native-svg": "^12.1.0",
     "react-native-ui-xg": "0.0.6",
     "rn-fetch-blob": "^0.12.0"
