--- a/absensigunungmasp1/package.json
+++ b/absensigunungmasp1/package.json
@@ -24,6 +24,7 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-document-picker": "^4.2.0",
     "react-native-file-upload": "^1.0.4",
+    "react-native-fs": "^2.16.6",
     "react-native-geolocation-service": "^5.1.1",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-image-picker": "^3.1.3",
