sakit udah bisa

--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "moment-timezone": "^0.5.34",
     "react": "18.0.0",
     "react-native": "0.69.4",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-document-picker": "^8.1.1",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-image-picker": "^4.8.5",
     "react-native-pulse-loader": "^1.0.3",
